--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,10 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.0'
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Build app
-        run: flutter build web
+#      - name: Install dependencies
+#        run: flutter pub get
+#      - name: Build app
+#        run: flutter build web
 #      - name: Deploy to S3
 #        uses: jameswomack/s3-upload-action@v1
 #        with:
