--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.0'
-#      - name: Install dependencies
-#        run: flutter pub get
+      - name: Install dependencies
+        run: flutter pub get
 #      - name: Build app
 #        run: flutter build web
 #      - name: Deploy to S3
