--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.0'
-      - name: Install dependencies
+#      - name: Install dependencies
       #  run: flutter pub get
 #      - name: Build app
 #        run: flutter build web
