--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,23 +8,32 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.0'
+
       - name: Install dependencies
         run: flutter pub get
+
       - name: Build app
         run: flutter build web
+
       - name: Install AWS CLI
-        run: sudo apt-get install awscli
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+
       - name: Deploy to S3
         run: |
-          aws s3 sync build/web s3://$S3_BUCKET_NAME --region $AWS_REGION
+          aws s3 sync build/web s3://$S3_BUCKET_NAME --region $AWS_REGION --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
