--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,14 +21,14 @@ jobs:
       - name: Print Flutter version
         run: flutter --version
 
-      - name: Clean Flutter cache
-        run: flutter clean
+#      - name: Clean Flutter cache
+#        run: flutter clean
 
 #      - name: Install dependencies
 #        run: flutter pub get
 
-      - name: Check Flutter doctor
-        run: flutter doctor -v
+#      - name: Check Flutter doctor
+#        run: flutter doctor -v
 
       - name: Build app
         run: flutter build web
