deploy.yml  commit 18

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,30 +11,31 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.0'  # Ensure this is the correct version
 
-      - name: Print Flutter version
-        run: flutter --version
+      - name: Print Flutter and Dart versions
+        run: |
+          flutter --version
+          dart --version
 
-#      - name: Clean Flutter cache
+#      - name: Clean Flutter project
 #        run: flutter clean
-
+#
 #      - name: Install dependencies
 #        run: flutter pub get
-
-#      - name: Check Flutter doctor
-#        run: flutter doctor -v
 
       - name: Build app
         run: flutter build web
 
-      - name: Set up AWS CLI
-        uses: aws-actions/aws-cli-action@v1
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
 
       - name: Print environment variables
         run: |
