--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
-name: CI/CD Pipeline
+name: Flutter CI
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
@@ -16,38 +19,15 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.0'  # Ensure this is the correct version
+          flutter-version: '3.8.0'  # Ensure this version is used
 
-      - name: Print Flutter and Dart versions
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Run tests
+        run: flutter test
+
+      - name: Check Flutter and Dart version
         run: |
           flutter --version
           dart --version
-
-#      - name: Clean Flutter project
-#        run: flutter clean
-#
-#      - name: Install dependencies
-#        run: flutter pub get
-#qq
-
-      - name: Build app
-        run: flutter build web
-
-      - name: Install AWS CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
-
-      - name: Print environment variables
-        run: |
-          echo "AWS_REGION=$AWS_REGION"
-          echo "S3_BUCKET_NAME=$S3_BUCKET_NAME"
-
-      - name: Deploy to S3
-        run: |
-          aws s3 sync build/web s3://$S3_BUCKET_NAME --region $AWS_REGION --delete
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
