--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,27 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+      - name: Build app
+        run: flutter build web
+
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+
+      - name: Print environment variables
+        run: |
+          echo "AWS_REGION=$AWS_REGION"
+          echo "S3_BUCKET_NAME=$S3_BUCKET_NAME"
+
+      - name: Deploy to S3
+        run: |
+          aws s3 sync build/web s3://$S3_BUCKET_NAME --region $AWS_REGION --delete
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
       - name: Run tests
         run: flutter test
@@ -31,3 +52,4 @@ jobs:
         run: |
           flutter --version
           dart --version
+        
